[package]
description = "Guessing game"
name = "guessing_game"
version = "1.0.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.winresource]
LegalCopyright = "Remzi Cavdar - MIT License"
ProductName = "Guessing game"

[dependencies]
rand = "0.8"
console = "0.15"

[build-dependencies]
winresource = "0.1"